[package]
name = "vodka"
version = "0.1.0"
authors = ["genot"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "handleapi", "libloaderapi", "minwindef", "processthreadsapi", "psapi", "winbase", "winnt"]}
