[package]
name = "vodka"
version = "0.1.0"
authors = ["genot"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
iced-x86 = "1.1.0"
tempfile = "3"
zip = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["basetsd", "errhandlingapi", "handleapi", "libloaderapi", "memoryapi", "minwindef", "processthreadsapi", "psapi", "synchapi", "winbase", "winnt"]}
